--- a/custom_components/mealServiceDietInfo/manifest.json
+++ b/custom_components/mealServiceDietInfo/manifest.json
@@ -1,12 +1,12 @@
 {
-  "domain": "seoul_bus",
-  "name": "seoul_bus",
-  "documentation": "https://github.com/miumida/seoul_bus",
+  "domain": "mealServiceDietLnfo",
+  "name": "mealServiceDietLnfo",
+  "documentation": "https://github.com/yellow0519/mealServiceDietInfo",
   "requirements": [],
   "dependencies": [],
   "codeowners": [
-    "@miumida"
+    "@yellow0519"
   ],
   "iot_class": "cloud_polling",
-  "version": "1.4.1"
+  "version": "1.0.0"
 }
